Finish login and logout

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5765,6 +5765,9 @@ p {
   font-size: 1.1em;
   line-height: 1.7em; }
 
+.checkbox input[type='checkbox'] {
+  width: auto; }
+
 /* header */
 .navbar-inverse {
   background-color: #3c3e42; }
@@ -5780,6 +5783,11 @@ p {
   font-weight: bold; }
   #logo:hover {
     color: #fff; }
+
+#logout {
+  cursor: default; }
+  #logout:hover {
+    background-color: transparent; }
 
 /* footer */
 footer {
